# architecture-workbench-recorder

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
config/: defaults.toml  file_targets.toml  local.example.toml
docs/: 2026-04-14-v0.1-design.md  2026-04-15-skill-overview.md  release-v0.1.0.md
examples/transcripts/: sample-thread.md
examples/workbenches/sample-workbench/: README.md  decision-log.md  open-questions.md  thread-log.md
scripts/: invoke-discussion-checkpoint.ps1  publish-to-github.ps1
skills/architecture-workbench-discussion/: SKILL.md
skills/architecture-workbench-discussion/agents/: openai.yaml
skills/plan-helper/: SKILL.md
skills/plan-helper/agents/: openai.yaml
source_code/awr/: __init__.py  cli.py
source_code/awr/apply_ops/: __init__.py  markdown.py
source_code/awr/compare/: __init__.py  diffing.py
source_code/awr/extract/: __init__.py  backends.py  claims.py  rule_based.py
source_code/awr/ingest/: __init__.py  transcript.py
source_code/awr/models/: __init__.py  contracts.py
source_code/awr/render/: __init__.py  proposal.py
source_code/awr/snapshot/: __init__.py  workbench.py
tests/: test_cli.py
tests/fixtures/: mock_external_backend.py  structured-transcript.json
tests/fixtures/sample-workbench/: glossary.md
